--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div class="q1">
+     <div class="container q3">
       <nav class="navbar navbar-expand-lg ">
         <div class="container-fluid">
           <img class="img_fluid q2" src="image/1.png" alt="">
@@ -41,6 +42,7 @@
           </div>
         </div>
       </nav>
+     </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
   </body>
