--- a/index.html
+++ b/index.html
@@ -28,10 +28,13 @@
               <li class="nav-item">
                 <a class="nav-link" href="#">SUPPORT</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link ">TERMES</a>
+              </li>
             </ul>
             <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
+              
+              <button class="btn btn-outline-success" type="submit">LOGIN</button>
             </form>
           </div>
         </div>
