--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
               
               <button class="btn btn-outline-success" type="submit">LOGIN</button>
             </form>
+            <a href="">العربية </a>
+            <img class="img_fluid q4" src="image/2.png" alt="">
           </div>
         </div>
       </nav>
