--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
               
               <button class="btn btn-outline-success" type="submit">LOGIN</button>
             </form>
-            <a href="">العربية </a>
+            <a class="q7" href="">العربية </a>
             <img class="img_fluid q4" src="image/2.png" alt="">
-            <a href="">ESPAÑOL</a>
+            <a class="q6" href="">ESPAÑOL</a>
             <img class="img_fluid q5" src="image/4.png" alt="">
           </div>
         </div>
