--- a/index.html
+++ b/index.html
@@ -49,9 +49,16 @@
      
     </div>
     <div class="w1">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-6"></div>
+      <div class="container py-5">
+        <div class="row py-5">
+          <div class="col-lg-6">
+            <h3 class="w2" >
+              Mobeasy The First Mobile Platform<br>
+              To Create Apps Easily And Edit the<br>
+              app Instantly Online Without<br>
+              Experience.
+            </h3>
+          </div>
           <div class="col-lg-6"></div>
         </div>
       </div>
