--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="row py-5">
           <div class="col-lg-6">
             <h3 class="w2" >
-              Mobeasy The First Mobile Platform<br>
+              Mybeai is a Mobile Platform<br>
               To Create Apps Easily And Edit the<br>
               app Instantly Online Without<br>
               Experience.
