--- a/index.html
+++ b/index.html
@@ -59,6 +59,14 @@
               Experience.
             </h3>
             <h5 class="w3 mt-5">Create Your App now.</h5>
+            <div class="row mt-5">
+              <div class="col-lg-6">
+                <a class="w4" href="">Start 3 Free Apps</a>
+              </div>
+              <div class="col-lg-6">
+                <a class="w5" href="">Login</a>
+              </div>
+            </div>
           </div>
           <div class="col-lg-6"></div>
         </div>
