--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-6"></div>
+          <div class="col-lg-6">
+            <img class="img_fluid w6" src="image/8.jpg" alt="">
+          </div>
         </div>
       </div>
     </div>
