--- a/index.html
+++ b/index.html
@@ -74,6 +74,15 @@
         </div>
       </div>
     </div>
+    <div class="e1">
+      <div class="container py-5">
+        <div class="row py-5">
+          <div class="col-lg-6 text-center mx-auto">
+<h1 class="e2">How To Make your Apps !</h1>
+          </div>
+        </div>
+      </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
   </body>
 </html>
