--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
         <div class="row py-5">
           <div class="col-lg-6 text-center mx-auto">
 <h1 class="e2">How To Make your Apps !</h1>
+<h5 class="e3 mt-3">Mybeai Supports: Admo, Facebook, StartAPP</h5>
           </div>
         </div>
       </div>
