--- a/index.html
+++ b/index.html
@@ -82,6 +82,11 @@
 <h5 class="e3 mt-3">Mybeai Supports: Admo, Facebook, StartAPP</h5>
           </div>
         </div>
+        <div class="row mt-5">
+          <div class="col-lg-4">
+            <img class="img_fluid e5" src="image/8.png" alt="">
+          </div>
+        </div>
       </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
