--- a/index.html
+++ b/index.html
@@ -82,9 +82,10 @@
 <h5 class="e3 mt-3">Mybeai Supports: Admo, Facebook, StartAPP</h5>
           </div>
         </div>
-        <div class="row mt-5">
+        <div class="row mt-4">
           <div class="col-lg-4">
             <img class="img_fluid e5" src="image/8.png" alt="">
+            <h4 class="e6 mt-3 text-center">Create Simple , Easy Apps With<br>Interesting Content With Ads.</h4>
           </div>
         </div>
       </div>
