--- a/index.html
+++ b/index.html
@@ -87,6 +87,14 @@
             <img class="img_fluid e5" src="image/8.png" alt="">
             <h4 class="e6 mt-3 text-center">Create Simple , Easy Apps With<br>Interesting Content With Ads.</h4>
           </div>
+          <div class="col-lg-4">
+            <img class="img_fluid e8" src="image/9.png" alt="">
+            <h4 class="e6 mt-3 text-center">Place Sponsored Ads On Your<br>High Engaged App.</h4>
+          </div>
+          <div class="col-lg-4">
+            <img class="img_fluid e7" src="image/10.png" alt="">
+            <h4 class="e6 mt-3 text-center">Sell Your Professional Apps<br>High Engaged App.</h4>
+          </div>
         </div>
       </div>
     </div>
