--- a/index.html
+++ b/index.html
@@ -96,6 +96,20 @@
             <h4 class="e6 mt-3 text-center">Sell Your Professional Apps<br>High Engaged App.</h4>
           </div>
         </div>
+        <div class="row mt-5">
+          <div class="col-lg-4">
+            <img class="img_fluid e5" src="image/11.png" alt="">
+            <h4 class="e6 mt-3 text-center">Create Attractive Apps Such<br>As Simple Games With Ads.</h4>
+          </div>
+          <div class="col-lg-4">
+            <img class="img_fluid e10" src="image/12.png" alt="">
+            <h4 class="e6 mt-3 text-center">Make Affiliate Sales Using Our<br>( Free Banner ) Feature.</h4>
+          </div>
+          <div class="col-lg-4">
+            <img class="img_fluid e11" src="image/13.png" alt="">
+            <h4 class="e6 mt-3 text-center">Take Commission To Apps<br>For Local Stores.</h4>
+          </div>
+        </div>
       </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
