--- a/index.html
+++ b/index.html
@@ -112,6 +112,16 @@
         </div>
       </div>
     </div>
+    <div class="r1">
+      <div class="container py-5">
+        <div class="row py-5">
+          <div class="col-lg-6 text-center mx-auto">
+<h2 class="r2">Select Mobeasy Plan That Fits Your<br>Needs And Start Now.</h2>
+          <h6 class="r3 mt-3">Subscribe With The Best Fitting Plan And<br>Start Earning Money Today.</h6>
+</div>
+        </div>
+      </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
   </body>
 </html>
