--- a/index.html
+++ b/index.html
@@ -119,10 +119,10 @@
 <h2 class="r2">Select Mobeasy Plan That Fits Your<br>Needs And Start Now.</h2>
           <h6 class="r3 mt-3">Subscribe With The Best Fitting Plan And<br>Start Earning Money Today.</h6>
 <div class="row mt-5">
-  <div class="col-lg-6">
+  <div class="col-lg-6 mt-4">
     <a class="r4" href="">Monthly</a>
   </div>
-  <div class="col-lg-6">
+  <div class="col-lg-6 mt-4">
     <a class="r5" href="">Yearly - 26% OFF</a>
   </div>
 </div>
