--- a/index.html
+++ b/index.html
@@ -128,6 +128,15 @@
 </div>
         </div>
         </div>
+        <div class="row">
+          <div class="col-lg-4">
+            <div class="t1 text-center mx-auto">
+<h3 class="t2 mt-4">Beginner</h3>
+<h1 class="t3 mt-3">$9.99/mo</h1>
+<p class="t4">Create 50 Apps</p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
