--- a/index.html
+++ b/index.html
@@ -133,7 +133,12 @@
             <div class="t1 text-center mx-auto">
 <h3 class="t2 mt-4">Beginner</h3>
 <h1 class="t3 mt-3">$9.99/mo</h1>
-<p class="t4">Create 50 Apps</p>
+<p class="t4 mt-3">Create 50 Apps</p>
+<p class="t5 mt-3">2 GB cloud storage</p>
+<p class="t6 mt-3">With Mobeasy Ads</p>
+<p class="t7 mt-3">5 Builds Apk/aab</p>
+<p class="t8 mt-3">
+  15 Pages Per App</p>
             </div>
           </div>
         </div>
