--- a/index.html
+++ b/index.html
@@ -139,6 +139,9 @@
 <p class="t7 mt-3">5 Builds Apk/aab</p>
 <p class="t8 mt-3">
   15 Pages Per App</p>
+  <div class="t9 mt-5">
+    <a class="t10" href="">Subscribe</a>
+  </div>
             </div>
           </div>
         </div>
