--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
 </div>
         </div>
         </div>
-        <div class="row">
-          <div class="col-lg-4">
+        <div class="row mt-5">
+          <div class="col-lg-4 mt-5">
             <div class="t1 text-center mx-auto">
 <h3 class="t2 mt-4">Beginner</h3>
 <h1 class="t3 mt-3">$9.99/mo</h1>
@@ -139,7 +139,7 @@
 <p class="t7 mt-3">5 Builds Apk/aab</p>
 <p class="t8 mt-3">
   15 Pages Per App</p>
-  <div class="t9 mt-5">
+  <div class="t9 mt-5 mb-5">
     <a class="t10" href="">Subscribe</a>
   </div>
             </div>
