--- a/index.html
+++ b/index.html
@@ -144,6 +144,21 @@
   </div>
             </div>
           </div>
+          <div class="col-lg-4 mt-5">
+            <div class="t1 text-center mx-auto">
+<h3 class="y2 mt-4">Basic</h3>
+<h1 class="t3 mt-3">$17.99/mo</h1>
+<p class="t4 mt-3">Create 50 Apps</p>
+<p class="t5 mt-3">2 GB cloud storage</p>
+<p class="t6 mt-3">With Mobeasy Ads</p>
+<p class="t7 mt-3">5 Builds Apk/aab</p>
+<p class="t8 mt-3">
+  15 Pages Per App</p>
+  <div class="t9 mt-5 mb-5">
+    <a class="t10" href="">Subscribe</a>
+  </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
