--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 <h1 class="t3 mt-3">$9.99/mo</h1>
 <p class="t4 mt-3">Create 50 Apps</p>
 <p class="t5 mt-3">2 GB cloud storage</p>
-<p class="t6 mt-3">With Mobeasy Ads</p>
+<p class="t6 mt-3">With Mybeai Ads</p>
 <p class="t7 mt-3">5 Builds Apk/aab</p>
 <p class="t8 mt-3">
   15 Pages Per App</p>
@@ -144,18 +144,17 @@
   </div>
             </div>
           </div>
-          <div class="col-lg-4 mt-5">
+          <div class="col-lg-4 mt-2">
             <div class="t1 text-center mx-auto">
 <h3 class="y2 mt-4">Basic</h3>
 <h1 class="t3 mt-3">$17.99/mo</h1>
-<p class="t4 mt-3">Create 50 Apps</p>
-<p class="t5 mt-3">2 GB cloud storage</p>
-<p class="t6 mt-3">With Mobeasy Ads</p>
-<p class="t7 mt-3">5 Builds Apk/aab</p>
-<p class="t8 mt-3">
-  15 Pages Per App</p>
+<p class="t4 mt-3">Create 300 Apps</p>
+<p class="t5 mt-3">10 GB cloud storage</p>
+<p class="t6 mt-3">no Mybeai Ads</p>
+<p class="t7 mt-3">30 Pages Per App</p>
+<p class="t8 mt-3">All Ads allowed</p>
   <div class="t9 mt-5 mb-5">
-    <a class="t10" href="">Subscribe</a>
+    <a class="y10" href="">Subscribe</a>
   </div>
             </div>
           </div>
