--- a/index.html
+++ b/index.html
@@ -158,6 +158,21 @@
   </div>
             </div>
           </div>
+          <div class="col-lg-4 mt-5">
+            <div class="t1 text-center mx-auto">
+<h3 class="t2 mt-4">Pro</h3>
+<h1 class="t3 mt-3">$25.99/mo</h1>
+<p class="t4 mt-3">Unlimited Apps</p>
+<p class="t5 mt-3">15 GB cloud storage</p>
+<p class="t6 mt-3">Unlimited Builds Apk/aab</p>
+<p class="t7 mt-3">All Ads Allowed +50% in $$$</p>
+<p class="t8 mt-3">Instant Content Update
+</p>
+  <div class="t9 mt-5 mb-5">
+    <a class="t10" href="">Subscribe</a>
+  </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
