--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         </div>
         </div>
         <div class="row mt-5">
-          <div class="col-lg-4 mt-5">
+          <div class="col-lg-4 mt-5 u1">
             <div class="t1 text-center mx-auto">
 <h3 class="t2 mt-4">Beginner</h3>
 <h1 class="t3 mt-3">$9.99/mo</h1>
@@ -144,7 +144,7 @@
   </div>
             </div>
           </div>
-          <div class="col-lg-4 mt-2">
+          <div class="col-lg-4 mt-2 u2">
             <div class="t1 text-center mx-auto">
 <h3 class="y2 mt-4">Basic</h3>
 <h1 class="t3 mt-3">$17.99/mo</h1>
@@ -158,7 +158,7 @@
   </div>
             </div>
           </div>
-          <div class="col-lg-4 mt-5">
+          <div class="col-lg-4 mt-5 u3">
             <div class="t1 text-center mx-auto">
 <h3 class="t2 mt-4">Pro</h3>
 <h1 class="t3 mt-3">$25.99/mo</h1>
